# pdi-nomad-plugin

./: 404.html  LICENSE  README.md  contact.html  index.html  pyproject.toml
.github/workflows/: actions.yml  mkdocs-deploy.yml
docs/: index.md
docs/explanation/: schemas.md
docs/how_to/: use_this_plugin.md
explanation/: levelsofschema.html  schemas.html
how_to/: develop.html  install.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/pdi_nomad_plugin/: utils.py
src/pdi_nomad_plugin/characterization/: __init__.py  schema.py
src/pdi_nomad_plugin/general/: __init__.py  schema.py
src/pdi_nomad_plugin/mbe/: README.md  __init__.py  instrument.py  materials.py  processes.py  schema.py  sources.py  test.ipynb  tset.ipynb
src/pdi_nomad_plugin/mbe/epic_parser/: __init__.py  parser.py
src/pdi_nomad_plugin/mbe/growth_excel/: __init__.py  parser.py
src/pdi_nomad_plugin/mbe/mbe_app/: __init__.py
tests/data/2023_06_12/: Ba.PID.OP.txt  Fitting.txt  GC Atmion.PG.MV.txt  GC IG.PG.MV.txt  GC IGd.PG.MV.txt  Ga.PID.wOP.txt  GaHL.PID.MV.txt  GaHL.PID.wOP.txt  GeO.PID.MV.txt  GeO.PID.wOP.txt  GeOHL.PID.MV.txt  In.PID.wOP.txt  La.PID.MV.txt  MBE8_config.xlsx  MC IG.PG.MV.txt  MIG.PG.EC.txt  MIG.PG.HST.txt  MIG.PG.IT.txt  MIG.PG.ITP.txt  MIG.PG.MV.txt  Messages.txt  QMB.PID.MV.txt  QMB.PID.wOP.txt  Shutters.txt  SnO.PID.MV.txt  SnOHL.PID.MV.txt  SnOHL.PID.OP.txt  Sub.PG.I.txt  Sub.PID.wOP.txt
tests/data/mbe/2023_06_12/: Ba.PID.MV.txt  FLUX IG.PG.MV.txt  Ga.PID.MV.txt  GeOHL.PID.wOP.txt  In.PID.MV.txt  InHL.PID.MV.txt  InHL.PID.wOP.txt  LL IG.PG.MV.txt  La.PID.wOP.txt  MBE8_config.xlsx  MC.PID.MV.txt  MC.PID.wOP.txt  MIG.PG.GS.txt  Messages.txt  N.MF.MV.txt  O.Forward.MV.txt  O.Light.MV.txt  O.MF.MV.txt  O.Reflect.MV.txt  Pyro.PID.MV.txt  Shutters.txt  SiO.PID.MV.txt  SiO.PID.wOP.txt  SnO.PID.wOP.txt  Sub.PG.P.txt  Sub.PG.V.txt  Sub.PID.MV.txt
tutorial/: tutorial.html
